# aws-glue-schema-registry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD-PARTY-LICENSES.txt  change-scala-version.sh  pom.xml  security.md  wget-log
.github/workflows/: MavenCI.yml  build-csharp.yml  build-golang.yml  build-musl.yml  main.yml
avro-flink-serde/: README.md  pom.xml
avro-kafkaconnect-converter/: dependency-reduced-pom.xml  pom.xml
avro-kafkaconnect-converter-msk-iam/: README.md  dependency-reduced-pom.xml  lombok.config  pom.xml
avro-kafkastreams-serde/: pom.xml
avro-serializer-deserializer/: pom.xml
avro-serializer-deserializer/src/resources/: log4j2.xml
build-tools/: pom.xml
build-tools/src/main/resources/: checkstyle.xml  (+1 more)
common/: pom.xml
cross-region-replication-converter/: .gitignore  pom.xml
cross-region-replication-mm2-converter/: pom.xml
examples/: README.md  pom.xml
integration-tests/: docker-compose.yml  pom.xml  run-canary-tests.sh  run-local-tests.sh
integration-tests/kafka-connect-avro-configs/: file-sink-standalone.properties  mongo-source-standalone.properties  nohup.out  worker.properties
integration-tests/kafka-connect-json-configs/: file-sink-standalone.properties  mongo-source-standalone.properties  nohup.out  worker.properties
integration-tests/kafka-connect-protobuf-configs/: file-sink-standalone.properties  mongo-source-standalone.properties  worker.properties
integration-tests/mirrormaker/: Dockerfile  run.sh
integration-tests/mirrormaker/mm2-configs/: connect-standalone.properties  mirror-checkpoint-connector.properties  mirror-heartbeat-connector.properties  mirror-source-connector.properties
integration-tests/mm2-configs/: connect-standalone.properties  mirror-checkpoint-connector.properties  mirror-heartbeat-connector.properties  mirror-source-connector.properties
jsonschema-kafkaconnect-converter/: dependency-reduced-pom.xml  pom.xml
kafkastreams-serde/: pom.xml
kafkastreams-serde/src/resources/: log4j2.xml
lz4-shim/: pom.xml
multilang-schema-registry/: .gitignore  CHANGELOG.md  README.md  pom.xml
multilang-schema-registry/GolangDemoGSRKafka/: go.sum
multilang-schema-registry/GolangDemoGSRKafka/protos/: order.proto  user.proto
multilang-schema-registry/GolangDemoGSRKafka/scripts/: run-demo.sh
multilang-schema-registry/c/: .clang-tidy  CMakeLists.txt  README.md
multilang-schema-registry/c/cmake/: CoverageCheck.cmake  RunTests.cmake  StaticAnalysis.cmake
multilang-schema-registry/c/include/: glue_schema_registry_deserializer.h  glue_schema_registry_error.h  glue_schema_registry_serializer.h  memory_allocator.h  mutable_byte_array.h  read_only_byte_array.h
multilang-schema-registry/c/src/: CMakeLists.txt  glue_schema_registry_deserializer.c  glue_schema_registry_schema.c  glue_schema_registry_serializer.c  read_only_byte_array.c
multilang-schema-registry/csharp/: config.properties
multilang-schema-registry/golang/: README.md  doc.go
multilang-schema-registry/scripts/: trace-protobuf-reflection.sh
native-schema-registry/: .gitignore  PROTOBUF_REFLECTION.md  README.md  build-csharp-native-schema-registry.sh  kafka-example-config.properties  pom.xml  sample-config-minimal.properties  sample-config.properties  test-config.properties
native-schema-registry/GolangDemoGSRKafka/: README.md  docker-compose.yml  dockerfile  example.env  go.mod
native-schema-registry/ProtobufGSRKafkaDemo/: README.md  check-topics.sh  cleanup-topics.sh  docker-compose.yml  nuget.config  run-demo.sh  start-kafka.sh  test-simple-consumer.sh
native-schema-registry/c/: .clang-tidy  CMakeLists.txt  README.md  format-check.sh  quality_check.sh.in
native-schema-registry/c/cmake/: FetchAwsCommon.cmake
native-schema-registry/c/include/: error_handling.h  glue_schema_registry_deserializer.h  glue_schema_registry_error.h  glue_schema_registry_memory_allocator.h  glue_schema_registry_schema.h  glue_schema_registry_serializer.h  memory_allocator.h  mutable_byte_array.h  read_only_byte_array.h
native-schema-registry/c/src/: CMakeLists.txt  glue_schema_registry_config.c  glue_schema_registry_deserializer.c  glue_schema_registry_error.c  glue_schema_registry_memory_allocator.c  glue_schema_registry_schema.c  glue_schema_registry_serializer.c  memory_allocator.c  mutable_byte_array.c  read_only_byte_array.c
native-schema-registry/c/src/cmake/: FetchAwsCommon.cmake
native-schema-registry/c/src/swig/: glue_schema_registry_deserializer.i  glue_schema_registry_error.i  glue_schema_registry_exception_interceptor.i  glue_schema_registry_schema.i  glue_schema_registry_serde.i  glue_schema_registry_serializer.i  mutable_byte_array.i  read_only_byte_array.i
native-schema-registry/c/test/: CMakeLists.txt  cmocka.h  glue_schema_registry_deserializer_test.c  glue_schema_registry_error_test.c  glue_schema_registry_schema_test.c  glue_schema_registry_serializer_test.c  glue_schema_registry_test_helper.c  glue_schema_registry_test_helper.h  libnativeschemaregistry_mock.c  libnativeschemaregistry_mock.h  mutable_byte_array_test.c  read_only_byte_array_test.c  schema_registry_memory_leak_test.c
native-schema-registry/c/test/cmake/: FetchCMocka.cmake
native-schema-registry/clang/: CMakeLists.txt  README.md
native-schema-registry/clang/include/: glue_schema_registry_serializer.h
native-schema-registry/clang/src/: CMakeLists.txt  glue_schema_registry_schema.c  glue_schema_registry_serializer.c
native-schema-registry/clang/src/swig/: glue_schema_registry_schema.i  glue_schema_registry_serializer.i
native-schema-registry/clang/test/: CMakeLists.txt  cmocka.h
native-schema-registry/clang/test/cmake/: FetchCMocka.cmake
native-schema-registry/golang/: .gitignore  Makefile  README.md  doc.go  go.mod  go.sum  gsrserde.go
native-schema-registry/python/: install.sh  setup.py
native-schema-registry/scripts/: trace-protobuf-reflection.sh
protobuf-kafkaconnect-converter/: README.md  dependency-reduced-pom.xml  pom.xml
serializer-deserializer/: pom.xml
serializer-deserializer-msk-iam/: dependency-reduced-pom.xml  pom.xml
(+919 files in other folders)
